# student-simulator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  debug_events.py  model_instructions.txt  notes.txt  project_requirements.txt  pyproject.toml  test_assessment_save.py
docs/: README.md  advanced-simulation.md  conf.py  getting-started.md  index.rst  introduction.rst
examples/: basic.yaml
src/simlearn/: __init__.py  api.py  cli.py  config.py
src/studentsimulator/: __init__.py  activity_provider.py  analytics.py  event.py  factory.py  general.py  io.py  item.py  math.py  skill.py  student.py
tests/: conftest.py  test_advanced_simulation_vignette.py  test_analytics.py  test_basic_usage.py  test_bkt_reduction.py  test_cdm_mode.py  test_cli.py  test_config.py  test_constructors.py  test_event_architecture.py  test_forgetting.py  test_getting_started_vignette.py  test_hybrid_learning_model.py  test_learning_journey.py  test_practice_with_items.py  test_psychometric_model_modes.py  test_readme.py  test_simlearn_api.py  test_skill_response_correlation.py  test_skill_transfer.py  test_train_val_test_split.py  test_version.py
